--- a/006_intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/006_intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,11 +119,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1595]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using the weights and bias tensors"
+    "## Calculate the output of this network using the weights and bias tensors\n",
+    "y = activation(torch.sum(features * weights) + bias)\n",
+    "y = activation((features * weights).sum() + bias)\n",
+    "y"
    ]
   },
   {
@@ -162,11 +176,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1595]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using matrix multiplication"
+    "## Calculate the output of this network using matrix multiplication\n",
+    "## Solution\n",
+    "\n",
+    "y = activation(torch.mm(features, weights.view(5,1)) + bias)\n",
+    "y"
    ]
   },
   {
@@ -204,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,11 +267,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3171]])\n"
+     ]
+    }
+   ],
    "source": [
-    "## Your solution here"
+    "## Your solution here\n",
+    "h = activation(torch.mm(features, W1) + B1)\n",
+    "output = activation(torch.mm(h, W2) + B2)\n",
+    "print(output)"
    ]
   },
   {
