--- a/006_intro-to-pytorch/Part 5 - Inference and Validation (Exercises).ipynb
+++ b/006_intro-to-pytorch/Part 5 - Inference and Validation (Exercises).ipynb
@@ -19,9 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz\n",
+      "Processing...\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torchvision import datasets, transforms\n",
@@ -47,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,23 +126,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1]])\n"
+      "tensor([[9],\n",
+      "        [9],\n",
+      "        [9],\n",
+      "        [9],\n",
+      "        [9],\n",
+      "        [9],\n",
+      "        [9],\n",
+      "        [9],\n",
+      "        [9],\n",
+      "        [9]])\n"
      ]
     }
    ],
@@ -156,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 7.8125%\n"
+      "Accuracy: 14.0625%\n"
      ]
     }
    ],
@@ -213,9 +226,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1/30..  Training Loss: 0.508..  Test Loss: 0.450..  Test Accuracy: 0.839\n",
+      "Epoch: 2/30..  Training Loss: 0.389..  Test Loss: 0.439..  Test Accuracy: 0.844\n",
+      "Epoch: 3/30..  Training Loss: 0.352..  Test Loss: 0.403..  Test Accuracy: 0.861\n",
+      "Epoch: 4/30..  Training Loss: 0.330..  Test Loss: 0.384..  Test Accuracy: 0.862\n",
+      "Epoch: 5/30..  Training Loss: 0.318..  Test Loss: 0.375..  Test Accuracy: 0.871\n",
+      "Epoch: 6/30..  Training Loss: 0.306..  Test Loss: 0.397..  Test Accuracy: 0.867\n",
+      "Epoch: 7/30..  Training Loss: 0.295..  Test Loss: 0.367..  Test Accuracy: 0.877\n",
+      "Epoch: 8/30..  Training Loss: 0.282..  Test Loss: 0.379..  Test Accuracy: 0.867\n",
+      "Epoch: 9/30..  Training Loss: 0.275..  Test Loss: 0.386..  Test Accuracy: 0.862\n",
+      "Epoch: 10/30..  Training Loss: 0.265..  Test Loss: 0.365..  Test Accuracy: 0.877\n",
+      "Epoch: 11/30..  Training Loss: 0.261..  Test Loss: 0.369..  Test Accuracy: 0.877\n",
+      "Epoch: 12/30..  Training Loss: 0.255..  Test Loss: 0.411..  Test Accuracy: 0.867\n",
+      "Epoch: 13/30..  Training Loss: 0.250..  Test Loss: 0.388..  Test Accuracy: 0.879\n",
+      "Epoch: 14/30..  Training Loss: 0.242..  Test Loss: 0.391..  Test Accuracy: 0.877\n",
+      "Epoch: 15/30..  Training Loss: 0.235..  Test Loss: 0.400..  Test Accuracy: 0.878\n",
+      "Epoch: 16/30..  Training Loss: 0.239..  Test Loss: 0.374..  Test Accuracy: 0.881\n",
+      "Epoch: 17/30..  Training Loss: 0.229..  Test Loss: 0.411..  Test Accuracy: 0.876\n",
+      "Epoch: 18/30..  Training Loss: 0.225..  Test Loss: 0.388..  Test Accuracy: 0.883\n",
+      "Epoch: 19/30..  Training Loss: 0.222..  Test Loss: 0.388..  Test Accuracy: 0.882\n",
+      "Epoch: 20/30..  Training Loss: 0.218..  Test Loss: 0.403..  Test Accuracy: 0.879\n",
+      "Epoch: 21/30..  Training Loss: 0.214..  Test Loss: 0.424..  Test Accuracy: 0.877\n",
+      "Epoch: 22/30..  Training Loss: 0.209..  Test Loss: 0.421..  Test Accuracy: 0.878\n",
+      "Epoch: 23/30..  Training Loss: 0.204..  Test Loss: 0.400..  Test Accuracy: 0.884\n",
+      "Epoch: 24/30..  Training Loss: 0.202..  Test Loss: 0.462..  Test Accuracy: 0.868\n",
+      "Epoch: 25/30..  Training Loss: 0.205..  Test Loss: 0.427..  Test Accuracy: 0.876\n",
+      "Epoch: 26/30..  Training Loss: 0.196..  Test Loss: 0.426..  Test Accuracy: 0.884\n",
+      "Epoch: 27/30..  Training Loss: 0.189..  Test Loss: 0.436..  Test Accuracy: 0.883\n",
+      "Epoch: 28/30..  Training Loss: 0.193..  Test Loss: 0.446..  Test Accuracy: 0.879\n",
+      "Epoch: 29/30..  Training Loss: 0.186..  Test Loss: 0.469..  Test Accuracy: 0.883\n",
+      "Epoch: 30/30..  Training Loss: 0.188..  Test Loss: 0.455..  Test Accuracy: 0.880\n"
+     ]
+    }
+   ],
    "source": [
     "model = Classifier()\n",
     "criterion = nn.NLLLoss()\n",
@@ -239,8 +289,27 @@
     "        running_loss += loss.item()\n",
     "        \n",
     "    else:\n",
-    "        ## TODO: Implement the validation pass and print out the validation accuracy\n",
-    "        print(f'Accuracy: {accuracy.item()*100}%')"
+    "        test_loss = 0\n",
+    "        accuracy = 0\n",
+    "        \n",
+    "        # Turn off gradients for validation, saves memory and computations\n",
+    "        with torch.no_grad():\n",
+    "            for images, labels in testloader:\n",
+    "                log_ps = model(images)\n",
+    "                test_loss += criterion(log_ps, labels)\n",
+    "                \n",
+    "                ps = torch.exp(log_ps)\n",
+    "                top_p, top_class = ps.topk(1, dim=1)\n",
+    "                equals = top_class == labels.view(*top_class.shape)\n",
+    "                accuracy += torch.mean(equals.type(torch.FloatTensor))\n",
+    "                \n",
+    "        train_losses.append(running_loss/len(trainloader))\n",
+    "        test_losses.append(test_loss/len(testloader))\n",
+    "\n",
+    "        print(\"Epoch: {}/{}.. \".format(e+1, epochs),\n",
+    "              \"Training Loss: {:.3f}.. \".format(running_loss/len(trainloader)),\n",
+    "              \"Test Loss: {:.3f}.. \".format(test_loss/len(testloader)),\n",
+    "              \"Test Accuracy: {:.3f}\".format(accuracy/len(testloader)))"
    ]
   },
   {
@@ -315,16 +384,121 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO: Define your model with dropout added"
+    "class Classifier(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.fc1 = nn.Linear(784, 256)\n",
+    "        self.fc2 = nn.Linear(256, 128)\n",
+    "        self.fc3 = nn.Linear(128, 64)\n",
+    "        self.fc4 = nn.Linear(64, 10)\n",
+    "\n",
+    "        # Dropout module with 0.2 drop probability\n",
+    "        self.dropout = nn.Dropout(p=0.2)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # make sure input tensor is flattened\n",
+    "        x = x.view(x.shape[0], -1)\n",
+    "\n",
+    "        # Now with dropout\n",
+    "        x = self.dropout(F.relu(self.fc1(x)))\n",
+    "        x = self.dropout(F.relu(self.fc2(x)))\n",
+    "        x = self.dropout(F.relu(self.fc3(x)))\n",
+    "\n",
+    "        # output so no dropout here\n",
+    "        x = F.log_softmax(self.fc4(x), dim=1)\n",
+    "\n",
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1/30..  Training Loss: 0.515..  Test Loss: 0.416..  Test Accuracy: 0.849\n",
+      "Epoch: 2/30..  Training Loss: 0.390..  Test Loss: 0.388..  Test Accuracy: 0.864\n",
+      "Epoch: 3/30..  Training Loss: 0.350..  Test Loss: 0.407..  Test Accuracy: 0.856\n",
+      "Epoch: 4/30..  Training Loss: 0.331..  Test Loss: 0.377..  Test Accuracy: 0.864\n",
+      "Epoch: 5/30..  Training Loss: 0.315..  Test Loss: 0.361..  Test Accuracy: 0.872\n",
+      "Epoch: 6/30..  Training Loss: 0.302..  Test Loss: 0.377..  Test Accuracy: 0.862\n",
+      "Epoch: 7/30..  Training Loss: 0.292..  Test Loss: 0.380..  Test Accuracy: 0.865\n",
+      "Epoch: 8/30..  Training Loss: 0.285..  Test Loss: 0.361..  Test Accuracy: 0.875\n",
+      "Epoch: 9/30..  Training Loss: 0.272..  Test Loss: 0.374..  Test Accuracy: 0.875\n",
+      "Epoch: 10/30..  Training Loss: 0.268..  Test Loss: 0.370..  Test Accuracy: 0.877\n",
+      "Epoch: 11/30..  Training Loss: 0.258..  Test Loss: 0.363..  Test Accuracy: 0.871\n",
+      "Epoch: 12/30..  Training Loss: 0.253..  Test Loss: 0.353..  Test Accuracy: 0.884\n",
+      "Epoch: 13/30..  Training Loss: 0.246..  Test Loss: 0.384..  Test Accuracy: 0.873\n",
+      "Epoch: 14/30..  Training Loss: 0.243..  Test Loss: 0.357..  Test Accuracy: 0.880\n",
+      "Epoch: 15/30..  Training Loss: 0.237..  Test Loss: 0.388..  Test Accuracy: 0.878\n",
+      "Epoch: 16/30..  Training Loss: 0.233..  Test Loss: 0.410..  Test Accuracy: 0.868\n",
+      "Epoch: 17/30..  Training Loss: 0.226..  Test Loss: 0.360..  Test Accuracy: 0.885\n",
+      "Epoch: 18/30..  Training Loss: 0.221..  Test Loss: 0.350..  Test Accuracy: 0.887\n",
+      "Epoch: 19/30..  Training Loss: 0.219..  Test Loss: 0.379..  Test Accuracy: 0.883\n",
+      "Epoch: 20/30..  Training Loss: 0.211..  Test Loss: 0.380..  Test Accuracy: 0.883\n",
+      "Epoch: 21/30..  Training Loss: 0.214..  Test Loss: 0.384..  Test Accuracy: 0.884\n",
+      "Epoch: 22/30..  Training Loss: 0.204..  Test Loss: 0.369..  Test Accuracy: 0.891\n",
+      "Epoch: 23/30..  Training Loss: 0.201..  Test Loss: 0.387..  Test Accuracy: 0.883\n",
+      "Epoch: 24/30..  Training Loss: 0.199..  Test Loss: 0.394..  Test Accuracy: 0.882\n",
+      "Epoch: 25/30..  Training Loss: 0.194..  Test Loss: 0.390..  Test Accuracy: 0.882\n",
+      "Epoch: 26/30..  Training Loss: 0.190..  Test Loss: 0.396..  Test Accuracy: 0.883\n",
+      "Epoch: 27/30..  Training Loss: 0.187..  Test Loss: 0.416..  Test Accuracy: 0.885\n",
+      "Epoch: 28/30..  Training Loss: 0.187..  Test Loss: 0.396..  Test Accuracy: 0.887\n",
+      "Epoch: 29/30..  Training Loss: 0.188..  Test Loss: 0.423..  Test Accuracy: 0.880\n",
+      "Epoch: 30/30..  Training Loss: 0.180..  Test Loss: 0.431..  Test Accuracy: 0.883\n"
+     ]
+    }
+   ],
    "source": [
-    "## TODO: Train your model with dropout, and monitor the training progress with the validation loss and accuracy"
+    "model = Classifier()\n",
+    "criterion = nn.NLLLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.003)\n",
+    "\n",
+    "epochs = 30\n",
+    "steps = 0\n",
+    "\n",
+    "train_losses, test_losses = [], []\n",
+    "for e in range(epochs):\n",
+    "    running_loss = 0\n",
+    "    for images, labels in trainloader:\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        log_ps = model(images)\n",
+    "        loss = criterion(log_ps, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        running_loss += loss.item()\n",
+    "        \n",
+    "    else:\n",
+    "        test_loss = 0\n",
+    "        accuracy = 0\n",
+    "        \n",
+    "        # Turn off gradients for validation, saves memory and computations\n",
+    "        with torch.no_grad():\n",
+    "            model.eval()\n",
+    "            for images, labels in testloader:\n",
+    "                log_ps = model(images)\n",
+    "                test_loss += criterion(log_ps, labels)\n",
+    "                \n",
+    "                ps = torch.exp(log_ps)\n",
+    "                top_p, top_class = ps.topk(1, dim=1)\n",
+    "                equals = top_class == labels.view(*top_class.shape)\n",
+    "                accuracy += torch.mean(equals.type(torch.FloatTensor))\n",
+    "        \n",
+    "        model.train()\n",
+    "        \n",
+    "        train_losses.append(running_loss/len(trainloader))\n",
+    "        test_losses.append(test_loss/len(testloader))\n",
+    "\n",
+    "        print(\"Epoch: {}/{}.. \".format(e+1, epochs),\n",
+    "              \"Training Loss: {:.3f}.. \".format(train_losses[-1]),\n",
+    "              \"Test Loss: {:.3f}.. \".format(test_losses[-1]),\n",
+    "              \"Test Accuracy: {:.3f}\".format(accuracy/len(testloader)))"
    ]
   },
   {
@@ -408,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
