--- a/007_convolutional-neural-networks/cifar-cnn/cifar10_cnn_exercise.ipynb
+++ b/007_convolutional-neural-networks/cifar-cnn/cifar10_cnn_exercise.ipynb
@@ -24,11 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA is available!  Training on GPU ...\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -55,10 +61,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to data\\cifar-10-python.tar.gz\n"
+     ]
+    }
+   ],
    "source": [
     "from torchvision import datasets\n",
     "import torchvision.transforms as transforms\n",
@@ -511,9 +523,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:cvnd_1]",
+   "display_name": "Python 3.6.9 64-bit ('ai_python': conda)",
    "language": "python",
-   "name": "conda-env-cvnd_1-py"
+   "name": "python36964bitaipythoncondad395324c5df042158800779a81421c98"
   },
   "language_info": {
    "codemirror_mode": {
@@ -525,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
