--- a/012_project-dog-classification/dog_app.ipynb
+++ b/012_project-dog-classification/dog_app.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -240,10 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### (Optional) \n",
@@ -268,9 +266,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VGG(\n",
+      "  (features): Sequential(\n",
+      "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): ReLU(inplace)\n",
+      "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (3): ReLU(inplace)\n",
+      "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (6): ReLU(inplace)\n",
+      "    (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (8): ReLU(inplace)\n",
+      "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (11): ReLU(inplace)\n",
+      "    (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (13): ReLU(inplace)\n",
+      "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (15): ReLU(inplace)\n",
+      "    (16): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (17): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (18): ReLU(inplace)\n",
+      "    (19): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (20): ReLU(inplace)\n",
+      "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (22): ReLU(inplace)\n",
+      "    (23): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (24): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (25): ReLU(inplace)\n",
+      "    (26): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (27): ReLU(inplace)\n",
+      "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (29): ReLU(inplace)\n",
+      "    (30): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  )\n",
+      "  (classifier): Sequential(\n",
+      "    (0): Linear(in_features=25088, out_features=4096, bias=True)\n",
+      "    (1): ReLU(inplace)\n",
+      "    (2): Dropout(p=0.5)\n",
+      "    (3): Linear(in_features=4096, out_features=4096, bias=True)\n",
+      "    (4): ReLU(inplace)\n",
+      "    (5): Dropout(p=0.5)\n",
+      "    (6): Linear(in_features=4096, out_features=1000, bias=True)\n",
+      "  )\n",
+      ")\n",
+      "4096\n",
+      "1000\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torchvision.models as models\n",
@@ -278,12 +329,18 @@
     "# define VGG16 model\n",
     "VGG16 = models.vgg16(pretrained=True)\n",
     "\n",
+    "\n",
     "# check if CUDA is available\n",
     "use_cuda = torch.cuda.is_available()\n",
     "\n",
     "# move model to GPU if CUDA is available\n",
     "if use_cuda:\n",
-    "    VGG16 = VGG16.cuda()"
+    "    VGG16 = VGG16.cuda()\n",
+    "\n",
+    "#ME\n",
+    "print(VGG16)\n",
+    "print(VGG16.classifier[6].in_features) \n",
+    "print(VGG16.classifier[6].out_features) "
    ]
   },
   {
@@ -306,11 +363,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([21.1965], device='cuda:0'), tensor([252], device='cuda:0'))"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from PIL import Image\n",
     "import torchvision.transforms as transforms\n",
@@ -318,6 +384,26 @@
     "# Set PIL to be tolerant of image files that are truncated.\n",
     "from PIL import ImageFile\n",
     "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
+    "\n",
+    "def process_image(img_path):\n",
+    "    ''' Scales, crops, and normalizes a PIL image for a PyTorch model,\n",
+    "        returns an Numpy array\n",
+    "    '''\n",
+    "    pil_im = Image.open(img_path, 'r')\n",
+    "\n",
+    "    pil_im.thumbnail((256,256))\n",
+    "    pil_im=pil_im.crop((16,16,240,240))\n",
+    "\n",
+    "\n",
+    "    #ish(np.asarray(pil_im))\n",
+    "    np_image = np.array(pil_im)\n",
+    "    \n",
+    "    #couldn't make it the other way\n",
+    "    transformations = transforms.Compose([transforms.ToTensor(),transforms.Normalize((0.485, 0.456, 0.406),\n",
+    "                                                               (0.229, 0.224, 0.225))])\n",
+    "    np_image = transformations(np_image).float()    \n",
+    "    return np_image\n",
+    "\n",
     "\n",
     "def VGG16_predict(img_path):\n",
     "    '''\n",
@@ -334,8 +420,38 @@
     "    ## TODO: Complete the function.\n",
     "    ## Load and pre-process an image from the given img_path\n",
     "    ## Return the *index* of the predicted class for that image\n",
+    "    if use_cuda:\n",
+    "        VGG16.cuda()\n",
     "    \n",
-    "    return None # predicted class index"
+    "    VGG16.eval()\n",
+    "    \n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "       \n",
+    "        image = process_image(img_path)\n",
+    "        if use_cuda:\n",
+    "            image = image.type(torch.FloatTensor).cuda()   \n",
+    "        \n",
+    "        \n",
+    "        image = image.unsqueeze(0)\n",
+    "        \n",
+    "        output = VGG16.forward(image)\n",
+    "        \n",
+    "        #ps = torch.exp(logps)\n",
+    "        cls_idx=torch.max(output, 1)\n",
+    "        #probs_tensor, classes_tensor = ps.topk(1,dim=1)\n",
+    "       \n",
+    "        \n",
+    "              \n",
+    "            \n",
+    "    #return probs_tensor, classes_tensor    \n",
+    "    return cls_idx   \n",
+    "    \n",
+    "#imaj=process_image(\"a.jpg\")    \n",
+    "#imaj.shape\n",
+    "predict_that=VGG16_predict(\"a.jpg\")\n",
+    "predict_that\n",
+    "\n"
    ]
   },
   {
