--- a/012_project-dog-classification/dog_app.ipynb
+++ b/012_project-dog-classification/dog_app.ipynb
@@ -363,18 +363,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(tensor([21.1965], device='cuda:0'), tensor([252], device='cuda:0'))"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'type'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-72-bd7c8423ea48>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     72\u001b[0m \u001b[1;31m#imaj.shape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[0mpredict_that\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mVGG16_predict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"a.jpg\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 74\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpredict_that\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     75\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'type'"
+     ]
     }
    ],
    "source": [
@@ -420,37 +421,38 @@
     "    ## TODO: Complete the function.\n",
     "    ## Load and pre-process an image from the given img_path\n",
     "    ## Return the *index* of the predicted class for that image\n",
+    "    \n",
     "    if use_cuda:\n",
     "        VGG16.cuda()\n",
     "    \n",
-    "    VGG16.eval()\n",
-    "    \n",
+    "    VGG16.eval()    \n",
     "    \n",
     "    with torch.no_grad():\n",
     "       \n",
     "        image = process_image(img_path)\n",
     "        if use_cuda:\n",
     "            image = image.type(torch.FloatTensor).cuda()   \n",
-    "        \n",
-    "        \n",
+    "        #I do not understand why we shold do this why not 3 dimensions are not sufficent.\n",
+    "        #print(image.shape)\n",
     "        image = image.unsqueeze(0)\n",
+    "        #print(image.shape)\n",
     "        \n",
     "        output = VGG16.forward(image)\n",
     "        \n",
     "        #ps = torch.exp(logps)\n",
-    "        cls_idx=torch.max(output, 1)\n",
+    "        _,cls_idx=torch.max(output, 1)\n",
     "        #probs_tensor, classes_tensor = ps.topk(1,dim=1)\n",
     "       \n",
     "        \n",
     "              \n",
     "            \n",
     "    #return probs_tensor, classes_tensor    \n",
-    "    return cls_idx   \n",
+    "    return cls_idx.item()   \n",
     "    \n",
     "#imaj=process_image(\"a.jpg\")    \n",
     "#imaj.shape\n",
     "predict_that=VGG16_predict(\"a.jpg\")\n",
-    "predict_that\n",
+    "print(predict_that)\n",
     "\n"
    ]
   },
@@ -476,8 +478,9 @@
     "### returns \"True\" if a dog is detected in the image stored at img_path\n",
     "def dog_detector(img_path):\n",
     "    ## TODO: Complete the function.\n",
-    "    \n",
-    "    return None # true/false"
+    "    prediction=VGG16_predict(img_path)\n",
+    "        \n",
+    "    return not (prediction<151 or prediction>268)# true/false\n"
    ]
   },
   {
