--- a/012_project-dog-classification/dog_app.ipynb
+++ b/012_project-dog-classification/dog_app.ipynb
@@ -363,18 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'type'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-72-bd7c8423ea48>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     72\u001b[0m \u001b[1;31m#imaj.shape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[0mpredict_that\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mVGG16_predict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"a.jpg\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 74\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpredict_that\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     75\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'type'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "224\n"
      ]
     }
    ],
@@ -451,7 +447,7 @@
     "    \n",
     "#imaj=process_image(\"a.jpg\")    \n",
     "#imaj.shape\n",
-    "predict_that=VGG16_predict(\"a.jpg\")\n",
+    "predict_that=VGG16_predict(\"./dogImages/test/022.Belgian_tervuren/Belgian_tervuren_01561.jpg\")\n",
     "print(predict_that)\n",
     "\n"
    ]
@@ -469,18 +465,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### returns \"True\" if a dog is detected in the image stored at img_path\n",
     "def dog_detector(img_path):\n",
     "    ## TODO: Complete the function.\n",
     "    prediction=VGG16_predict(img_path)\n",
     "        \n",
-    "    return not (prediction<151 or prediction>268)# true/false\n"
+    "    return not (prediction<151 or prediction>268)# true/false\n",
+    "dog_detector(\"a.jpg\")"
    ]
   },
   {
